# conditioner

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  dark.qss  light.qss  main.cpp  settings.xml  Руководство_оператора.docx
